--- a/configs/Pretrain_tracking.yaml
+++ b/configs/Pretrain_tracking.yaml
@@ -1,6 +1,6 @@
-train_file:  '/scratch/work/guoz3/EyeTracking/data/full/new_logs'
-image_root: '/scratch/work/guoz3/EyeTracking/data/full/dataset/train'
-eval_image_root: '/scratch/work/guoz3/EyeTracking/data/full/dataset/test'
+train_file:  'data/new_logs'
+image_root: 'data/dataset/train'
+eval_image_root: 'data/dataset/test'
 
 bert_config: 'configs/config_bert.json'
 
@@ -19,7 +19,7 @@ dropout: 0.1
 
 
 optimizer: {opt: adamW, lr: 1e-4, weight_decay: 0.02}
-schedular: {sched: cosine, lr: 1e-4, epochs: 30, min_lr: 1e-5, decay_rate: 1, warmup_lr: 1e-5, warmup_epochs: 20, cooldown_epochs: 0}
+schedular: {sched: cosine, lr: 1e-4, epochs: 1, min_lr: 1e-5, decay_rate: 1, warmup_lr: 1e-5, warmup_epochs: 20, cooldown_epochs: 0}
 
 
 
